# Zenotype-Ticket-Bot

./: .gitignore  pyproject.toml
api/: pyproject.toml
api/api/: __main__.py  constants.py
api/api/models/: __init__.py  base.py  guild.py  message.py  panel.py  roles.py  team.py  ticket.py
api/api/routes/: __init__.py  guilds.py  messages.py  panels.py  roles.py  root.py  teams.py  tickets.py
api/api/utils/: helpers.py
bot/: idea.txt  pyproject.toml
bot/ticket_bot/: __init__.py  __main__.py  bot.py  constants.py
bot/ticket_bot/database/: __init__.py  base.py  config.py  guild.py  ticket.py
bot/ticket_bot/exts/: commands.py  config.py  ready.py
bot/ticket_bot/exts/backend/: delete_btn_listener.py  error_handler.py  ticket_client_btn_listener.py  ticket_create_btn_listener.py
bot/ticket_bot/utils/buttons/: __init__.py  delete_button.py
ticket_bot/: __main__.py  bot.py  constants.py  log.py
ticket_bot/database/: base.py
ticket_bot/utils/: extensions.py
webapp/: bun.lockb  index.html  package.json  svelte.config.js
webapp/src/: app.d.ts  hooks.server.ts
webapp/src/components/: loader.svelte
webapp/src/controllers/: ipc.ts  user.ts
webapp/src/routes/: +layout.svelte  +page.ts
webapp/src/routes/(app)/: +layout.server.ts  +layout.svelte
webapp/src/routes/(app)/app/: +page.server.ts  +page.svelte
webapp/src/routes/(auth)/: +error.svelte  +layout.server.ts  +layout.svelte
webapp/src/routes/callback/: +page.server.ts
webapp/src/routes/login/: +page.server.ts  +page.svelte
webapp/src/routes/logout/: +page.server.ts
(+19 files in other folders)
