[tool.poetry]
name = "ticket-bot"
version = "0.1.0"
description = ""
authors = ["Known_Black_Hat <knownblackhat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
disnake = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
